# AIM---Autonomous-Institutional-Memory

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BENCHMARKS.md  CLAUDE.md  Dockerfile  EVAL.md  LIMITATIONS.md  Makefile  QUALITY_EVIDENCE.md  README.md  SECURITY.md  docker-compose.yml  eval_report_after_teacher_bfs.md.json  pyproject.toml
.github/workflows/: ci.yml
aim/: config.py  main.py
aim/agents/: __init__.py  branch_selector.py  graph_scoring.py  hybrid_retriever.py  prompts.py  reasoning_agent.py  reranker.py  state.py
aim/api/: deps.py  middleware.py
aim/eval/: __init__.py  baselines.py  harness.py  judge.py  loader.py  metrics.py  report.py
aim/extraction/: __init__.py  base.py  deduplicator.py  llm_extractor.py  schemas.py
aim/graph/: migrations.py  neo4j_client.py  queries.py
aim/ingestion/: __init__.py  live_worker.py
aim/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
aim/mcp/: capability_negotiator.py  confluence_provider.py  handler.py  jira_provider.py  jsonrpc.py  registry.py  slack_provider.py  sse_transport.py
aim/schemas/: __init__.py  conversation.py  feedback.py  graph.py  mcp.py  provenance.py  query.py
aim/scripts/: seed_demo.py  seed_domains.py  seed_expansion.py
aim/utils/: __init__.py  access_control.py  audit_log.py  cache.py  circuit_breaker.py  conversation_store.py  data_classification.py  encryption.py  facts.py  logging.py  mention_extractor.py  metrics.py  semantic_classifier.py  sovereignty.py  tenant_keys.py  tracing.py  truth.py
aim/vectordb/: __init__.py  base.py  factory.py  pinecone_client.py  pinecone_provider.py  qdrant_provider.py
aim/workers/: ingest_worker.py  mcp_ingest_worker.py
docs/: GITHUB_RELEASE_CHECKLIST.md
docs/benchmarks/: eval_report_after_teacher_bfs.md
frontend/: .env.local.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
frontend/__tests__/: aim-store.test.ts  barnes-hut.test.ts  error-boundary.test.tsx  graph-edges.test.ts  knowledge-graph.test.ts  message-bubble.test.tsx  provenance-map.test.ts  sse-streaming.test.ts  utils.test.ts  violating-edges.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: aim-dashboard.tsx  background-scene.tsx  console-panel.tsx  error-boundary.tsx  knowledge-graph.tsx  message-bubble.tsx  reasoning-panel.tsx  source-panel.tsx
frontend/hooks/: useAIMQuery.ts
frontend/lib/: barnes-hut.ts  provenance-map.ts  utils.ts
frontend/stores/: aim-store.ts
frontend/types/: aim.ts
scripts/: eval_live.py  eval_smoke.py  replay_slack_event.py
scripts/loadtest/: OPS_PRESSURE_TEST.md  loadtest.js  memory_leak.py  rotate_keys.sh
tests/: conftest.py
tests/eval/: test_harness_exit.py  test_loader.py  test_metrics.py  test_report.py
tests/fixtures/: adversarial_seed.py  fake_mcp_server.py
tests/integration/: test_conversations.py  test_feedback.py  test_graph_routes.py  test_health.py  test_phase13_mcp_subprocess.py  test_query_routes.py  test_streaming.py  test_webhooks.py
tests/unit/: test_agent_state_reducers.py  test_aplus_upgrades.py  test_audit_log.py  test_branch_modality_gates.py  test_branch_orchestrator.py  test_branch_selector.py  test_cache.py  test_cache_reconnect.py  test_circuit_breaker.py  test_citation_spans.py  test_classify_text.py  test_confluence_provider.py  test_conversation_store.py  test_data_classification.py  test_decomposer.py  test_evaluator.py  (+69 more)
(+27 files in other folders)
