[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aim"
version = "0.2.0"
description = "AIM – Autonomous Institutional Memory: graph-backed RAG with agentic reasoning"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.136.1,<0.137",
    "starlette>=0.49.1,<1.1",
    "uvicorn[standard]>=0.46.0,<0.47",
    "python-multipart>=0.0.12,<0.1",
    # Pydantic
    "pydantic>=2.9.0,<3",
    "pydantic-settings>=2.6.0,<3",
    # LangGraph / LangChain — patched 1.x line; keep upper bounds deliberate
    # because graph orchestration is on the critical path.
    "langgraph>=1.1.10,<1.2",
    "langgraph-checkpoint>=4.0.3,<5",
    "langchain>=1.2.15,<1.3",
    "langchain-anthropic>=1.4.1,<1.5",
    "langchain-core>=1.3.2,<1.4",
    # Graph DB
    "neo4j>=5.26.0,<6",
    # Vector DB
    "pinecone-client>=5.0.1,<6",
    "qdrant-client>=1.13.0,<2",
    # Embeddings
    "openai>=1.54.0,<2",
    # Caching
    "redis[asyncio]>=5.2.0,<6",
    "cachetools>=5.5.0,<6",
    "cryptography>=47.0.0,<48",
    # HTTP
    "httpx>=0.27.0,<0.29",
    "httpx-sse>=0.4.0,<0.5",
    # Observability
    "prometheus-client>=0.21.0,<0.22",
    "opentelemetry-api>=1.27.0,<2",
    "opentelemetry-sdk>=1.27.0,<2",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0,<2",
    # Utilities
    "python-dotenv>=1.0.1,<2",
    "structlog>=24.4.0,<26",
    "tenacity>=9.0.0,<10",
    "orjson>=3.10.0,<4",

    # Fuzzy entity resolution (cross-system merge in synthesizer)
    "rapidfuzz>=3.10.0,<4",
    "sentence-transformers>=5.0.0,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-httpx>=0.36.2,<0.37",
    "pytest-cov>=5.0.0,<7",
    "coverage[toml]>=7.6.0,<8",
    "fakeredis[aioredis]>=2.26.0,<3",
    "httpx>=0.27.0,<0.29",
    "ruff>=0.7.0,<0.12",
    "mypy>=1.11.0,<2",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["aim"]
omit = [
    "aim/__init__.py",
    "aim/*/__init__.py",
    "aim/utils/tracing.py",
    "aim/graph/migrations.py",
    "aim/graph/neo4j_client.py",    # requires real Neo4j connection
    "aim/vectordb/pinecone_client.py",  # requires real Pinecone + OpenAI
    "aim/mcp/slack_provider.py",    # requires real Slack API
    "aim/mcp/jira_provider.py",     # requires real Jira API
    "aim/mcp/client/stdio_client.py",  # requires real subprocess (MCP server)
    "aim/mcp/client/session.py",    # requires real MCP subprocess + handshake
    "aim/mcp/confluence_provider.py",  # requires real Confluence/MCP subprocess
    "aim/mcp/sse_transport.py",     # requires real SSE connection
    "aim/workers/mcp_ingest_worker.py",  # requires real Redis + MCP + Neo4j
    "aim/main.py",                  # lifespan requires all services running
    "aim/scripts/*",                # CLI seed scripts require real external services
    "aim/llm/openai_provider.py",   # requires real OpenAI API; Anthropic provider tested
]

[tool.coverage.report]
fail_under = 92
show_missing = true
skip_covered = false
